fixed landing page shift

--- a/src/components/Landing/Landing.module.scss
+++ b/src/components/Landing/Landing.module.scss
@@ -63,9 +63,15 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    max-width: 1000px;
+    width: 800px;
 
     @media screen and (max-width: 1024px) {
         font-size: 20px;
+        width: 500px;
+    }
+
+    @media screen and (max-width: 768px) {
+        font-size: 20px;
+        width: 300px;
     }
 }
